New drunk demo.

--- a/content/store/demos/drunk/index.html
+++ b/content/store/demos/drunk/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Spice Up</title>
+    <title>Spice Up Drunk</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -32,7 +32,7 @@
         codeUrl: buildUrl + "/Drunk.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Fronkon Games",
-        productName: "Spice Up",
+        productName: "Spice Up Drunk",
         productVersion: "1.0.0",
       };
 
