--- a/content/store/demos/rain/index.html
+++ b/content/store/demos/rain/index.html
@@ -25,11 +25,11 @@
     <script>
       const hideFullScreenButton = "1";
       const buildUrl = "Build";
-      const loaderUrl = buildUrl + "/Rain.loader.js";
+      const loaderUrl = buildUrl + "/rain.loader.js";
       const config = {
-        dataUrl: buildUrl + "/Rain.data",
-        frameworkUrl: buildUrl + "/Rain.framework.js",
-        codeUrl: buildUrl + "/Rain.wasm",
+        dataUrl: buildUrl + "/rain.data",
+        frameworkUrl: buildUrl + "/rain.framework.js",
+        codeUrl: buildUrl + "/rain.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Fronkon Games",
         productName: "Spice Up Speed",
