One Bit v2 demo.

--- a/content/store/demos/one-bit/index.html
+++ b/content/store/demos/one-bit/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>One Bit</title>
+    <title>Artistic</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -25,14 +25,14 @@
     <script>
       const hideFullScreenButton = "1";
       const buildUrl = "Build";
-      const loaderUrl = buildUrl + "/WebGL.loader.js";
+      const loaderUrl = buildUrl + "/onebit.loader.js";
       const config = {
-        dataUrl: buildUrl + "/WebGL.data",
-        frameworkUrl: buildUrl + "/WebGL.framework.js",
-        codeUrl: buildUrl + "/WebGL.wasm",
+        dataUrl: buildUrl + "/onebit.data.gz",
+        frameworkUrl: buildUrl + "/onebit.framework.js.gz",
+        codeUrl: buildUrl + "/onebit.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Fronkon Games",
-        productName: "One Bit",
+        productName: "Artistic",
         productVersion: "1.0.0",
       };
 
