One Bit demo fix.

--- a/content/store/demos/onebit/index.html
+++ b/content/store/demos/onebit/index.html
@@ -27,9 +27,9 @@
       const buildUrl = "Build";
       const loaderUrl = buildUrl + "/onebit.loader.js";
       const config = {
-        dataUrl: buildUrl + "/onebit.data.gz",
-        frameworkUrl: buildUrl + "/onebit.framework.js.gz",
-        codeUrl: buildUrl + "/onebit.wasm.gz",
+        dataUrl: buildUrl + "/onebit.data",
+        frameworkUrl: buildUrl + "/onebit.framework.js",
+        codeUrl: buildUrl + "/onebit.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Fronkon Games",
         productName: "Artistic",
